# opensles-sys

./: .gitignore  Cargo.toml  README.md  build.rs  gen.sh  generate.sh
headers/: wrapper.h
src/: bindings.rs  lib.rs
