[package]
name    = "opensles-sys"
description = "Raw bindings to Android's OpenSLES sound API"
version = "0.0.6"
links   = "OpenSLES"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/AmpMe/opensles-sys"
authors = ["Andre-Philippe Paquet <app@ampme.com>"]

[lib]
name = "opensles"

[build-dependencies]
bindgen = "0.40.0"
